--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ android {
 }
 
 dependencies {
+    def ktx = "2.5.1"
+    def retrofit = "2.9.0"
+    def glide = "4.13.2"
+    def room_version = "2.4.3"
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -51,13 +55,13 @@ dependencies {
     kapt "com.google.dagger:hilt-compiler:2.38.1"
 
     //navigation
-    implementation "androidx.navigation:navigation-fragment-ktx:2.5.1"
-    implementation "androidx.navigation:navigation-ui-ktx:2.5.1"
+    implementation "androidx.navigation:navigation-fragment-ktx:$ktx"
+    implementation "androidx.navigation:navigation-ui-ktx:$ktx"
 
     //retrofit
     implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit"
 
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
@@ -68,8 +72,13 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha01"
 
     //glide
-    implementation 'com.github.bumptech.glide:glide:4.13.2'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+    implementation "com.github.bumptech.glide:glide:$glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide"
+
+    //room
+    implementation "androidx.room:room-ktx:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
 
     //mocikto
     testImplementation "io.mockk:mockk:1.12.7"
